# product-analyze

./: .gitattributes  .gitignore  CNN.py  README.md  classifier.py  dataDict.txt  file2Json.py  gra_data.json  isCorrect.csv  isCorrect.txt  isCorrect.xlsx  newDataGPU.csv  newDataNotGPU.csv  notCorrect.csv  notCorrect.txt  notCorrect.xlsx  pyproject.toml  read.py  select.py  selectFiles.py  test.json  test.py  tfid_testingSet.csv  tfid_trainingSet.csv  train.json  train_Data.csv  train_Data.txt  train_Data.xlsx  unSupport.txt  word.json  顯示卡
data/: ALL_DATA.json  answer.csv  test_data.csv  train_Data.csv
develop/: gra_word_df.json  test copy.py  test.py
name/: new_answer.csv  new_test_data.csv  new_train_data.csv  train_Data.csv
score/: new_score_answer.csv  new_score_data.csv  new_score_test_data.csv  score_answer.csv  score_data.csv  score_test_data.csv
