[tool.poetry]
name = "final-report"
version = "0.1.0"
description = ""
authors = ["apple860601 <apple860601@gmail.com>"]
readme = "README.md"
packages = [{include = "final_report"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp310-cp310-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu113/torchaudio-0.12.1%2Bcu113-cp310-cp310-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp310-cp310-win_amd64.whl"}
pandarallel = "^1.6.3"
pyarrow = "^10.0.1"
pyspark = "^3.2"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
ipywidgets = "^8.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
